// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorScreen with errorMessage renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FFFFFF",
      "flex": 1,
      "height": 1292,
      "justifyContent": "space-between",
      "paddingBottom": 30,
      "paddingHorizontal": 20,
      "paddingTop": 55,
      "width": 750,
    }
  }
>
  <View
    style={Object {}}
  >
    <Text
      style={
        Object {
          "color": "#2E3338",
          "fontFamily": "Hind-Light",
          "fontSize": 22,
          "paddingBottom": 20,
          "textAlign": "center",
        }
      }
    >
      oops
    </Text>
    <Text
      style={
        Object {
          "color": "#2E3338",
          "fontFamily": "Hind-Light",
          "fontSize": 18,
          "textAlign": "center",
        }
      }
    >
      somethingWrong
    </Text>
  </View>
  <View>
    <Text
      ellipsizeMode="tail"
      numberOfLines={10}
      style={
        Object {
          "backgroundColor": "rgba(238, 238, 238, 0.75)",
          "borderRadius": 25,
          "fontFamily": "Hind-Regular",
          "fontSize": 12,
          "padding": 15,
        }
      }
    >
      Déjà vu
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderRadius": 3,
            "flexDirection": "row",
          },
          Object {
            "marginVertical": 10,
          },
          Object {
            "marginBottom": 10,
          },
          undefined,
          Object {
            "backgroundColor": "#42D689",
          },
        ]
      }
    >
      <View
        accessible={true}
        isTVSelectable={true}
        nativeBackgroundAndroid={
          Object {
            "attribute": "selectableItemBackground",
            "type": "ThemeAttrAndroid",
          }
        }
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
            },
            Object {
              "backgroundColor": "#42D689",
            },
            Object {
              "height": 50,
            },
            Object {
              "borderColor": "#42D689",
              "borderRadius": 3,
              "borderWidth": 2,
            },
          ]
        }
        testID="ErrorContinueButton"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "fontFamily": "Hind-SemiBold",
                  "fontSize": 16,
                },
                Object {
                  "color": "#FFFFFF",
                },
                Object {
                  "paddingLeft": 5,
                  "paddingRight": 5,
                },
              ]
            }
          >
            restartApp
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`ErrorScreen without errorMessage renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FFFFFF",
      "flex": 1,
      "height": 1292,
      "justifyContent": "space-between",
      "paddingBottom": 30,
      "paddingHorizontal": 20,
      "paddingTop": 55,
      "width": 750,
    }
  }
>
  <View
    style={Object {}}
  >
    <Text
      style={
        Object {
          "color": "#2E3338",
          "fontFamily": "Hind-Light",
          "fontSize": 22,
          "paddingBottom": 20,
          "textAlign": "center",
        }
      }
    >
      oops
    </Text>
    <Text
      style={
        Object {
          "color": "#2E3338",
          "fontFamily": "Hind-Light",
          "fontSize": 18,
          "textAlign": "center",
        }
      }
    >
      somethingWrong
    </Text>
  </View>
  <View>
    <Text
      ellipsizeMode="tail"
      numberOfLines={10}
      style={
        Object {
          "backgroundColor": "rgba(238, 238, 238, 0.75)",
          "borderRadius": 25,
          "fontFamily": "Hind-Regular",
          "fontSize": 12,
          "padding": 15,
        }
      }
    >
      unknown
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderRadius": 3,
            "flexDirection": "row",
          },
          Object {
            "marginVertical": 10,
          },
          Object {
            "marginBottom": 10,
          },
          undefined,
          Object {
            "backgroundColor": "#42D689",
          },
        ]
      }
    >
      <View
        accessible={true}
        isTVSelectable={true}
        nativeBackgroundAndroid={
          Object {
            "attribute": "selectableItemBackground",
            "type": "ThemeAttrAndroid",
          }
        }
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
            },
            Object {
              "backgroundColor": "#42D689",
            },
            Object {
              "height": 50,
            },
            Object {
              "borderColor": "#42D689",
              "borderRadius": 3,
              "borderWidth": 2,
            },
          ]
        }
        testID="ErrorContinueButton"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "fontFamily": "Hind-SemiBold",
                  "fontSize": 16,
                },
                Object {
                  "color": "#FFFFFF",
                },
                Object {
                  "paddingLeft": 5,
                  "paddingRight": 5,
                },
              ]
            }
          >
            restartApp
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
